# LoaAssist

./: .gitignore  .gitmodules  .prettierrc  README.md  eslint.config.js  latest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
.github/: labels.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  enhancement_request.yml  feature_request.md  feature_request.yml  question.md  question.yml
.github/workflows/: label-critical-enhancements.yml
md/: rust_debounce_throttle.md
scripts/: sync-init.sh  sync-to-public.sh
src/: app.css  app.html  hooks.server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: audio_manager.rs
src-tauri/src/dock/: dock_events.rs  dock_manager.rs  mod.rs
src-tauri/src/macros/: mod.rs
src-tauri/src/state/: app_state.rs  store.rs  types.rs
src-tauri/src/tray/: handlers.rs  menu.rs  mod.rs  tray.rs
src-tauri/src/ui/: animations.rs
src-tauri/src/update/: mod.rs  update.rs
src-tauri/src/window_utils/: auto_focus_shift.rs  mod.rs  window_os_info.rs  window_search.rs
src/lib/: types.ts
src/lib/components/: Dashboard.svelte  Setting.svelte  Tab.svelte  TitleBar.svelte  WorkSheet.svelte
src/lib/components/modal/: GroupEditModal.svelte  (+1 more)
src/lib/data/: class_list.json  color_list.json  default_raids.json
src/lib/db/: index.ts  schema.ts
src/lib/utils/: docking.ts  invoke.ts  utils.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/settings/: +page.svelte
src/stores/: appStore.ts
src/types/: tauri-commands.d.ts
(+4 files in other folders)
