[package]
name = "LoaAssist"
version = "1.1.0" # Cargo Version은 Rust 프로젝트의 버전을 지정함
description = "Lost Ark Assist"
authors = ["Casin <kkig30@gmail.com>"]
edition = "2021"
repository = "https://github.com/CasinGit/LoaAssist"
license = "GNU General Public License v3.0"
rust-version = "1.82.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loaassist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
dirs = "4.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rodio = "0.17"
enigo = "0.1.3"
os_info = "3"
sha2 = "0.10"
tempfile = "3.10"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
semver = "1.0"
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
